working tree modified

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -1,4 +1,4 @@
-// out: ../../dist/css/styles.css
+// out: ../css/styles.css
 @semibold10: 10px ProximaNovaSemibold;
 @semibold13: 13px ProximaNovaSemibold;
 @bold13: 13px ProximaNovaBold;
