--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -36,9 +36,10 @@
   padding-top: 8px;
 }
 .top .top-col-center a {
-  color: #9c9c9c;
+  text-transform: uppercase;
   text-decoration: none;
   display: block;
+  color: #9c9c9c;
   padding: 20px;
 }
 .top .top-col-center ul {
@@ -52,7 +53,7 @@
 }
 .top .top-col-right {
   padding: 20px;
-  width: 25%;
+  width: 19%;
 }
 .top .top-col-right div {
   width: 49%;
@@ -71,6 +72,7 @@
 }
 .top .top-col-left {
   padding: 20px;
+  width: 19%;
   width: 25%;
 }
 .top .top-col-left div {
@@ -118,9 +120,10 @@
   margin: 0;
 }
 .products .products-menu a {
-  color: #1e1e1e;
   text-transform: uppercase;
+  text-decoration: none;
   display: block;
+  color: #1e1e1e;
   text-align: center;
   padding: 20px 0;
 }
@@ -132,6 +135,26 @@
   width: 5%;
 }
 .slider img {
+  width: 100%;
+  height: auto;
+}
+.intro:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.intro .intro_item {
+  display: inline-block;
+  position: relative;
+  float: left;
+  width: 33.333%;
+}
+.intro .intro_item .intro_header {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.intro .intro_item img {
   width: 100%;
   height: auto;
 }
