--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -153,8 +153,43 @@
   position: absolute;
   top: 0;
   left: 0;
+  margin-top: 30px;
+  font: 18px ProximaNovaBold;
+  padding: 0 30px 0 40px;
+}
+.intro .intro_item .intro_header-black {
+  color: #1e1e1e;
+}
+.intro .intro_item .intro_header-black ~ button {
+  background: #1e1e1e url(../img/arrow1.png) center no-repeat;
+}
+.intro .intro_item .intro_header-gold {
+  color: #c59a77;
+}
+.intro .intro_item .intro_header-gold ~ button {
+  background: #c59a77 url(../img/arrow2.png) center no-repeat;
+}
+.intro .intro_item .intro_header-white {
+  color: #fff;
+}
+.intro .intro_item .intro_header-white ~ button {
+  background: white url(../img/arrow.png) center no-repeat;
 }
 .intro .intro_item img {
   width: 100%;
   height: auto;
+}
+.intro .intro_item button {
+  position: absolute;
+  bottom: 30px;
+  left: 30px;
+  border: none;
+  outline: none;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+}
+.intro .intro_item button:hover {
+  opacity: .3;
 }
