--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -193,3 +193,34 @@
 .intro .intro_item button:hover {
   opacity: .3;
 }
+.shop .shop_item {
+  width: 33%;
+  display: inline-block;
+  border-bottom: 1px solid #f2f2f2;
+  border-left: 1px solid #f2f2f2;
+  position: relative;
+  transition: all .4s;
+}
+.shop .shop_item img {
+  width: 100%;
+  height: auto;
+}
+.shop .shop_item h3 {
+  position: absolute;
+}
+.shop .shop_item button {
+  position: absolute;
+  bottom: 30px;
+  right: 30px;
+  background: #ffffff url('../img/basket.png') center no-repeat;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: none;
+  outline: none;
+  box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.16);
+  transition: all .4s;
+}
+.shop .shop_item button:hover {
+  background: #c59a77 url('../img/basket1.png') center no-repeat;
+}
