--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -201,3 +201,37 @@
         }
     }
 }
+.shop{
+
+    .shop_item{
+        width: 33%;
+        display: inline-block;
+        border-bottom: @border;
+        border-left: @border;
+        position: relative;
+        transition: all .4s;
+        &::
+        img{
+            .responsive;
+        }
+        h3{
+            position: absolute;
+        }
+        button{
+            position: absolute;
+            bottom: 30px;
+            right: 30px;
+            background: #fff url('../img/basket.png') center no-repeat;
+            width:40px;
+            height: 40px;
+            border-radius: 50%;
+            border: none;
+            outline: none;
+            box-shadow: 0px 3px 4px rgba(0,0,0,.16);
+            transition:all .4s;
+            &:hover{
+                background: @gold url('../img/basket1.png') center no-repeat;
+            }
+        }
+    }
+}
