--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -202,15 +202,33 @@
     }
 }
 .shop{
-
     .shop_item{
-        width: 33%;
+        width: 33.33%;
         display: inline-block;
         border-bottom: @border;
         border-left: @border;
         position: relative;
         transition: all .4s;
-        &::
+        float: left;
+        &::before{
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-color: @gold;
+            opacity: 0;
+            top: 0;
+            left: 0;
+            transition: all .4s;
+        }
+        &:hover{
+            &::before{
+                opacity: .2
+            }
+            button{
+                background: @gold url('../img/basket1.png') center no-repeat;
+            }
+        }
         img{
             .responsive;
         }
@@ -229,9 +247,9 @@
             outline: none;
             box-shadow: 0px 3px 4px rgba(0,0,0,.16);
             transition:all .4s;
-            &:hover{
-                background: @gold url('../img/basket1.png') center no-repeat;
-            }
         }
     }
+}
+.row{
+    .clearfix;
 }
