--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -11,11 +11,13 @@
 @padding-left-right:0 30px 0 40px;
 @border:1px solid #f2f2f2;
 //media
-@tablet: ~"(min-width: 768px)";
-@tablet-max: ~"(min-width: 1024px)";
-@desktop-min: ~"(min-width: 1240px)";
-@desktop-mid: ~"(min-width: 1360px)";
-@desktop-lg: ~"(min-width: 1600px)";
+@mobile : ~"(max-width: 480px)";
+@tablet-min: ~"(max-width: 768px)";
+@tablet-md: ~"(max-width: 1024px)";
+@tablet-max: ~"(max-width: 1240px)";
+@desktop-min: ~"(max-width: 1360px)";
+@desktop-md: ~"(max-width: 1600px)";
+@desktop-max: ~"(max-width: 1601px)";
 
 .responsive(){
     width:100%;
@@ -65,9 +67,11 @@
     src: url(../fonts/Brandon_bld.otf)
 }
 .top{
+    .clearfix();
     font:@semibold10;
     color:@gray;
     text-transform: uppercase;
+    position: relative;
     >*{
         display:inline-block
     }
@@ -86,7 +90,17 @@
             text-align: center;
             li{
                 display: inline-block;
+                @media @tablet-md{
+                    display: block;
+                }
             }
+        }
+        @media @tablet-md{
+            position: absolute;
+            top: 15%;
+            left:0;
+            transform:translateX(-100%);
+
         }
     }
     .top-col-right{
@@ -107,6 +121,10 @@
                 color:@black;
             }
         }
+        @media @tablet-md{
+            width: 49%;
+            position: relative;
+        }
     }
     .top-col-left{
         .top-col-right;
@@ -116,12 +134,6 @@
 .num{
     font-size: 19px;
     color:@black;
-    @media @tablet-max{
-        font-size: 14px;
-    }
-    @media @desktop-min{
-        font-size: 18px;
-    }
 }
 .float-left{
     float: left;
@@ -158,6 +170,14 @@
             width:10.2%;
             &:last-child{
                 width: 5%;
+                @media @tablet-md{
+                    width: 100%
+                }
+            }
+            @media @tablet-md{
+                display: block;
+                text-align: center;
+                width:100%;
             }
         }
     }
@@ -180,7 +200,10 @@
             left:0;
             margin-top: 30px;
             font:@bold18;
-            padding: @padding-left-right;
+            padding: @padding-left-right;                @media @tablet-md{
+                margin-top: 20px;
+                padding-left: @padding-small;
+            }
         }
         .intro_header-black{
             color:@black;
@@ -214,6 +237,10 @@
             height: 40px;
             cursor: pointer;
             transition: all .4s;
+            @media @tablet-md{
+                bottom: 20px;
+                left:20px;
+            }
         }
         &:hover{
             button{
@@ -294,11 +321,17 @@
             box-shadow: 0px 3px 4px rgba(0,0,0,.16);
             transition:all .4s;
         }
+        @media @tablet-md{
+            width: 50%;
+        }
     }
     .shop_card{
         float: left;
         width: 66.67%;
         position: relative;
+        @media @tablet-md{
+            width: 100%
+        }
         img{
             .responsive();
         }
@@ -383,4 +416,4 @@ footer{
 .row{
     .clearfix();
 }
-@media
+
