--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -28,6 +28,9 @@
     font: @bold18;
     text-transform: uppercase;
     margin: 0;
+    @media @tablet-min{
+        font-size: 14px;
+    }
  }
 .anchor(){
     text-transform: uppercase;
@@ -65,6 +68,26 @@
 @font-face{
     font-family: Brandon_bld;
     src: url(../fonts/Brandon_bld.otf)
+}
+.main_menu_button{
+    border-radius:50%;
+    overflow: hidden;
+    display: none;
+    position: fixed;
+    top: 50px;
+    left: 30px;
+    width: 40px;
+    height: 40px;
+    background: #ffffff url("../img/home.png") center no-repeat;
+    background-size:20px 20px ;
+    z-index: 50;
+    box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.16);
+    img{
+        .responsive();
+    }
+    @media @tablet-md{
+        display: block;
+    }
 }
 .top{
     .clearfix();
@@ -134,6 +157,9 @@
 .num{
     font-size: 19px;
     color:@black;
+    @media @tablet-min{
+        font-size: 14px;
+    }
 }
 .float-left{
     float: left;
@@ -153,7 +179,26 @@
     font:@bold13;
     padding: @padding-left-right;
     border:@border;
+    .nav_button{
+        position: absolute;
+        width: 40px;
+        height: 40px;
+        right: 30px;
+        display: none;
+        span{
+            display: block;
+            width: 100%;
+            height: 4px;
+            background: @black;
+            margin-top: 19%;
+            border-radius: 4px;
 
+        }
+        @media @tablet-md{
+            display: block;
+        }
+
+    }
     .products-menu{
         padding-left: 0;
         list-style: none;
@@ -180,11 +225,80 @@
                 width:100%;
             }
         }
+        @media @tablet-md{
+            margin-top: 40px;
+            max-height: 0px;
+        }
     }
 }
 .slider{
-    img{
+    position: relative;
+    .slider_description{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 35%;
+        padding: 5%;
+        h2{
+            font-family: TrajanPro-regular;
+            text-transform: uppercase;
+            font-size: 72px;
+            font-weight: 400;
+            margin: 0 0 35px;
+            padding-bottom: 25px;
+            position: relative;
+            &:after{
+                content: '';
+                position: absolute;
+                height: 2px;
+                border-radius: 2px;
+                width: 10%;
+                left: 0;
+                bottom: 0;
+                background-color: @black;
+            }
+        }
+        span{
+            display: block;
+            font: @bold18;
+        }
+        img{
+            width: 50%;
+            height: auto;
+            position: absolute;
+            right: 0;
+            bottom: -52%;
+        }
+    }
+    .slider_index{
+        position: absolute;
+        top: 30px;
+        right: 30px;
+        li{
+            width: 10px;
+            height: 10px;
+            border: 3px solid #fff;
+            border-radius: 50%;
+            display: block;
+            list-style: none;
+            &.active{
+                border: none;
+                background-color: #fff;
+            }
+        }
+    }
+    .slide{
         .responsive();
+    }
+    .control{
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        border: none;
+        background: #fff url(../img/arrow.png) center no-repeat;
+        position: absolute;
+        right: 30px;
+        top: 45%;
     }
 }
 .intro{
@@ -203,6 +317,10 @@
             padding: @padding-left-right;                @media @tablet-md{
                 margin-top: 20px;
                 padding-left: @padding-small;
+                font-size: 14px;
+            }
+            @media @tablet-min{
+                margin-top: 10px;
             }
         }
         .intro_header-black{
@@ -240,6 +358,11 @@
             @media @tablet-md{
                 bottom: 20px;
                 left:20px;
+                width: 30px;
+                height: 30px;
+            }
+            @media @tablet-min{
+                bottom: 10px;
             }
         }
         &:hover{
@@ -297,6 +420,13 @@
                 margin-top: 30px;
                 display: block;
                 width:40%;
+                @media @tablet-min{
+                    font-size: 12px;
+                    margin-top: 20px;
+                }
+            }
+            @media @tablet-min{
+                padding: @padding-small;
             }
         }
         .shop_price{
@@ -307,6 +437,11 @@
             font-size: 18px;
             font-family: ProximaNovaSemibold;
             color: @gray;
+            @media @tablet-min{
+                font-size: 14px;
+                bottom: 20px;
+                left: 20px;
+            }
             }
         button{
             position: absolute;
@@ -350,6 +485,12 @@
                 font-family: ProximaNovaRegular;
                 font-size: 14px;
                 color: #535151;
+                @media @tablet-min{
+                    font-size: 11px;
+                }
+            }
+            @media @tablet-min{
+                padding: @padding-small;
             }
         }
     }
@@ -364,6 +505,9 @@ footer{
         color:@gray;
         font: @semibold13;
         display: block;
+        @media @tablet-min{
+            font-size: 11px
+        }
     }
     h3{
         .shop-h3;
@@ -387,6 +531,9 @@ footer{
         float: left;
         width: 16.66%;
         padding: 30px;
+        @media @tablet-min{
+            width: 33.33%;
+        }
 
     }
     .footer_column_media{
